18/2/2020 - Avances
*Analisis Lexico -> Terminado
*Generacion de Token -> Terminado
*Analisis de Tokens
	+Se identifican conjuntos
	+Se idntifican ExpReg
	+Se identifican Lexemas de Pruebas
*Analisis de Expresiones Regulares
	+Se calculan Anulables
	+Se calculan Primeros
	+Se calculan Ultimos
	+Se calculan Siguientes
*Generacion de Diagrama de Estado
	+Se crearon clases Estado y Transicion
	+Creado Algoritmo para generacion de estados (SIN PROBAR)

NOTA: AUN NO SE DISPONE DE USO DE INTERFAZ NI GENRACION DE IMAGENES EN GRAPHVIZ